changed humans.txt to reflect new credits. Removed input buttons (hidden). Changed input background colour to paper tone. Updated back button to fix a bug with happy face not showing after correct answer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,7 +228,7 @@ body
 
 input
 {
-    background-color: yellow;
+    background-color: #efd189;
 }
 
 h1
